--- a/src/recipesearch/recipe_listitem.fxml
+++ b/src/recipesearch/recipe_listitem.fxml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<fx:root prefHeight="100.0" prefWidth="495.0" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root onMouseClicked="#onClick" prefHeight="100.0" prefWidth="495.0" type="javafx.scene.layout.AnchorPane" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ImageView fitHeight="118.0" fitWidth="118.0" layoutX="2.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <Label layoutX="178.0" layoutY="14.0" prefHeight="30.0" prefWidth="69.0" text="tmp" />
+      <ImageView fx:id="imageView" fitHeight="118.0" fitWidth="118.0" layoutX="2.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <image>
+            <Image url="@resources/logo.png" />
+         </image></ImageView>
+      <Label fx:id="recipeName" layoutX="180.0" layoutY="10.0" prefHeight="30.0" prefWidth="294.0" text="Hej" wrapText="true" />
    </children>
 </fx:root>
