--- a/src/recipesearch/recipe_search.fxml
+++ b/src/recipesearch/recipe_search.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -7,36 +8,35 @@
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="500.0" maxWidth="800.0" minHeight="500.0" minWidth="800.0" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="recipesearch.RecipeSearchController">
    <children>
       <StackPane prefHeight="500.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #123456;" />
-            <SplitPane dividerPositions="0.35" prefHeight="160.0" prefWidth="200.0">
+            <SplitPane fx:id="searchPane" dividerPositions="0.35" prefHeight="160.0" prefWidth="200.0">
               <items>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #FFFFFF;">
                      <children>
-                        <ComboBox fx:id="mainIngredientBox" layoutX="111.0" layoutY="127.0" prefHeight="26.0" prefWidth="150.0" />
-                        <ComboBox fx:id="cuisineBox" layoutX="111.0" layoutY="169.0" prefWidth="150.0" />
-                        <RadioButton layoutX="110.0" layoutY="230.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="45.0" text="Alla">
-                           <toggleGroup>
-                              <ToggleGroup fx:id="DifficultyGroup" />
-                           </toggleGroup></RadioButton>
-                        <Spinner fx:id="MaxpriceSpinner" layoutX="117.0" layoutY="386.0" prefHeight="26.0" prefWidth="76.0" />
-                        <Label alignment="CENTER_RIGHT" layoutX="7.0" layoutY="131.0" prefHeight="18.0" prefWidth="102.0" text="Huvudingrediens" textAlignment="RIGHT" />
-                        <Label alignment="CENTER_RIGHT" layoutX="24.0" layoutY="173.0" text="Kök" />
-                        <Label alignment="CENTER_RIGHT" layoutX="22.0" layoutY="231.0" text="Svårighetsgrad" textAlignment="RIGHT" />
+                        <ComboBox fx:id="mainIngredientBox" layoutX="110.0" layoutY="200.0" />
+                        <ComboBox fx:id="cuisineBox" layoutX="110.0" layoutY="240.0" />
+                        <RadioButton fx:id="allDiff" layoutX="120.0" layoutY="290.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Alla" />
+                        <Spinner fx:id="MaxpriceSpinner" editable="true" layoutX="117.0" layoutY="386.0" prefHeight="26.0" prefWidth="76.0" />
+                        <Label alignment="CENTER_RIGHT" layoutY="200.0" prefHeight="18.0" prefWidth="102.0" text="Huvudingrediens" textAlignment="RIGHT" />
+                        <Label alignment="CENTER_RIGHT" layoutX="80.0" layoutY="240.0" text="Kök" />
+                        <Label alignment="CENTER_RIGHT" layoutX="20.0" layoutY="290.0" text="Svårighetsgrad" textAlignment="RIGHT" />
                         <Label alignment="CENTER_RIGHT" layoutX="28.0" layoutY="390.0" prefHeight="18.0" prefWidth="48.0" text="Maxpris" />
                         <Label alignment="CENTER_RIGHT" layoutX="24.0" layoutY="427.0" prefHeight="18.0" prefWidth="38.0" text="Maxtid" />
-                        <RadioButton layoutX="109.0" layoutY="249.0" mnemonicParsing="false" text="Lätt" toggleGroup="$DifficultyGroup" />
-                        <RadioButton layoutX="109.0" layoutY="267.0" mnemonicParsing="false" text="Mellan" toggleGroup="$DifficultyGroup" />
-                        <RadioButton layoutX="115.0" layoutY="285.0" mnemonicParsing="false" text="Svår" toggleGroup="$DifficultyGroup" />
-                        <Slider fx:id="MaxtimeSlider" layoutX="97.0" layoutY="429.0" majorTickUnit="150.0" max="150.0" min="10.0" minorTickCount="14" showTickLabels="true" showTickMarks="true" value="50.0" />
+                        <RadioButton fx:id="easyDiff" layoutX="120.0" layoutY="310.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Lätt" />
+                        <RadioButton fx:id="medDiff" layoutX="120.0" layoutY="330.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Mellan" />
+                        <RadioButton fx:id="hardDiff" layoutX="120.0" layoutY="350.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Svår" />
+                        <Slider fx:id="MaxtimeSlider" layoutX="97.0" layoutY="429.0" majorTickUnit="10.0" max="150.0" min="10.0" minorTickCount="0" prefHeight="26.0" prefWidth="140.0" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="50.0" />
+                        <Label layoutX="29.0" layoutY="88.0" prefHeight="59.0" prefWidth="239.0" text="Hitta ett recept som passar genom att ändra inställningarna nedanför" textAlignment="CENTER" wrapText="true" />
+                        <Label fx:id="MaxpriceLabel" layoutX="193.0" layoutY="467.0" text="Hello" />
                      </children>
                   </AnchorPane>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0" style="-fx-background-color: #FFFFFF;">
@@ -49,6 +49,16 @@
                      </children></AnchorPane>
               </items>
             </SplitPane>
+            <AnchorPane fx:id="recipeDetailPane" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #123456;">
+               <children>
+                  <Label fx:id="currentRecipeLabel" alignment="TOP_LEFT" layoutX="332.0" layoutY="14.0" prefHeight="138.0" prefWidth="398.0" text="Receptnamn" textAlignment="CENTER" textFill="#ff0303" wrapText="true">
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+                  <ImageView fx:id="currentRecipeImage" fitHeight="233.0" fitWidth="305.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+                  <Button fx:id="closeRecipeButton" layoutX="734.0" layoutY="14.0" mnemonicParsing="false" onAction="#closeRecipeView" text="Stäng" />
+               </children></AnchorPane>
          </children>
       </StackPane>
    </children>
